--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,31 @@
+# Fichiers générés par Android Studio/IntelliJ
+.idea/
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+.idea/*
+!.idea/.gitignore
+.gradle/
 local.properties
+build/
+*.properties
+.externalNativeBuild
+.cxx/
+*.pb
+*.log
+*.cache
+/captures/
+.DS_Store
+Thumbs.db
+/libs/
+*.hprof
+*.pyc
+*.apk
+*.aab
+*.dex
+*.class
+/out/
+*.swp
+*.swo
+*.bak
+*.tmp
+*.keystore
+*.jks
